fixed overflow issue on aspect ratio

--- a/postCSS/dev/mixins/_ratio.css
+++ b/postCSS/dev/mixins/_ratio.css
@@ -1,5 +1,6 @@
 @define-mixin aspect-ratio $width, $height{
   position: relative;
+  overflow: hidden;
   &:before{
     display: block;
     content: "";
